--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -3,7 +3,7 @@
     &__bio-image {
         height: 50vh;
         width: 100%;
-        background: linear-gradient( to right, rgba($background, 0.9), rgba($background, 0.3)), url('../img/model-1.jpg') center top;
+        background: linear-gradient( to right, rgba($theme, 0.9), rgba($theme, 0.3)), url('../img/windowShot.jpg') center center;
         background-size: cover;
         display: flex;
         flex-direction: column;
@@ -16,8 +16,10 @@
     &__bio {
         width: 80%;
         text-align: center;
+        color: $background;
         .text-secondary {
             padding-bottom: 1rem;
+            color: $background;
         }
     }
     .jobs {
