--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: linear-gradient( to right, rgba($background, 0.9), rgba($background, 0.3)), url('../img/model-1.jpg') center top;
+    background: linear-gradient( to right, rgba($background, 0.9), rgba($background, 0.3)), url('../img/windowShot.jpg') center center;
     background-size: cover;
     h2 {
         font-size: 3rem;
