--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -72,7 +72,7 @@
     .social-icons {
         flex-direction: column;
     }
-    @include media-md {
+    @include media-sm {
         footer {
             transform: rotate(90deg) translate(-3rem, -5rem);
         }
