--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -63,7 +63,7 @@
         }
     }
     .contact__list {
-        grid-template-columns: repeat(3, 1fr);
+        // grid-template-columns: repeat(3, 1fr);
     }
 }
 
