--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@ body {
     height: 100vh;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1;
+    display: block;
 }
 
 h1,
